@@ -16,6 +16,10 @@
  *****************************************************************************/
 package org.compiere.model;
 
+import org.adempiere.core.domains.models.I_C_Invoice;
+import org.adempiere.core.domains.models.I_C_Order;
+import org.adempiere.core.domains.models.I_M_AttributeSetInstance;
+import org.adempiere.core.domains.models.X_C_Order;
 import org.compiere.util.CLogger;
 import org.compiere.util.DB;
 import org.compiere.util.DisplayType;
@@ -24,6 +28,7 @@ import org.compiere.util.Ini;
 import org.compiere.util.Msg;
 
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
@@ -40,6 +45,9 @@ import java.util.logging.Level;
  *  @author Michael McKay (mjmckay)
  *  		<li> BF3468458 - Attribute Set Instance not filled on Orders when product lookup not used.
  *  			 See https://sourceforge.net/tracker/?func=detail&aid=3468458&group_id=176962&atid=879332
+ *  @author Raul Capecce, raul.capecce@solopsoftware.com, Solop https://solopsoftware.com/
+ *		<a href="https://github.com/adempiere/adempiere/issues/4188">
+ * 		@see BF [ 4188 ] Badly formatted end of line in files</a>
  */
 public class CalloutOrder extends CalloutEngine
 {
@@ -135,7 +143,7 @@ public class CalloutOrder extends CalloutEngine
 					mTab.setValue ("InvoiceRule", X_C_Order.INVOICERULE_AfterDelivery);
 				
 				//	Payment Rule - POS Order
-				if (DocSubTypeSO.equals(MOrder.DocSubTypeSO_POS))
+				if (DocSubTypeSO.equals(MOrder.DocSubTypeSO_POS) || DocSubTypeSO.equals(MOrder.DocSubTypeSO_InvoiceOrder))
 					mTab.setValue("PaymentRule", X_C_Order.PAYMENTRULE_Cash);
 				else
 					mTab.setValue("PaymentRule", X_C_Order.PAYMENTRULE_OnCredit);
@@ -209,7 +217,7 @@ public class CalloutOrder extends CalloutEngine
 						mTab.setValue("PaymentRule", s);
 					}
 					//	Payment Term
-					Integer ii =new Integer(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
+					Integer ii = Integer.valueOf(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
 					if (!rs.wasNull())
 						mTab.setValue("C_PaymentTerm_ID", ii);
 					//	InvoiceRule
@@ -309,14 +317,14 @@ public class CalloutOrder extends CalloutEngine
 					mTab.setValue("C_SalesRegion_ID", salesRegionId);
 				}
 				//	PriceList (indirect: IsTaxIncluded & Currency)
-				Integer ii = new Integer(rs.getInt(IsSOTrx ? "M_PriceList_ID" : "PO_PriceList_ID"));
+				Integer ii = Integer.valueOf(rs.getInt(IsSOTrx ? "M_PriceList_ID" : "PO_PriceList_ID"));
 				if (!rs.wasNull())
 					mTab.setValue("M_PriceList_ID", ii);
 				else
 				{	//	get default PriceList
 					int i = Env.getContextAsInt(ctx, "#M_PriceList_ID");
 					if (i != 0)
-						mTab.setValue("M_PriceList_ID", new Integer(i));
+						mTab.setValue("M_PriceList_ID", Integer.valueOf(i));
 				}
 
 				//	Bill-To
@@ -325,7 +333,7 @@ public class CalloutOrder extends CalloutEngine
 				if (bill_Location_ID == 0)
 					mTab.setValue("Bill_Location_ID", null);
 				else
-					mTab.setValue("Bill_Location_ID", new Integer(bill_Location_ID));
+					mTab.setValue("Bill_Location_ID", Integer.valueOf(bill_Location_ID));
 				// Ship-To Location
 				int shipTo_ID = rs.getInt("C_BPartner_Location_ID");
 				//	overwritten by InfoBP selection - works only if InfoWindow
@@ -339,7 +347,7 @@ public class CalloutOrder extends CalloutEngine
 				if (shipTo_ID == 0)
 					mTab.setValue("C_BPartner_Location_ID", null);
 				else
-					mTab.setValue("C_BPartner_Location_ID", new Integer(shipTo_ID));
+					mTab.setValue("C_BPartner_Location_ID", Integer.valueOf(shipTo_ID));
 
 				//	Contact - overwritten by InfoBP selection
 				int contID = rs.getInt("AD_User_ID");
@@ -353,8 +361,8 @@ public class CalloutOrder extends CalloutEngine
 					mTab.setValue("AD_User_ID", null);
 				else
 				{
-					mTab.setValue("AD_User_ID", new Integer(contID));
-					mTab.setValue("Bill_User_ID", new Integer(contID));
+					mTab.setValue("AD_User_ID", Integer.valueOf(contID));
+					mTab.setValue("Bill_User_ID", Integer.valueOf(contID));
 				}
 
 				//	CreditAvailable 
@@ -402,7 +410,7 @@ public class CalloutOrder extends CalloutEngine
 					mTab.setValue("InvoiceRule", X_C_Order.INVOICERULE_Immediate);
 					mTab.setValue("DeliveryRule", X_C_Order.DELIVERYRULE_AfterReceipt);
 				}
-				else if (OrderType.equals(MOrder.DocSubTypeSO_POS))	//  for POS
+				else if (OrderType.equals(MOrder.DocSubTypeSO_POS) || OrderType.equals(MOrder.DocSubTypeSO_InvoiceOrder))	//  for POS
 					mTab.setValue("PaymentRule", X_C_Order.PAYMENTRULE_Cash);
 				else
 				{
@@ -417,7 +425,7 @@ public class CalloutOrder extends CalloutEngine
 						mTab.setValue("PaymentRule", s);
 					}
 					//	Payment Term
-					ii = new Integer(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
+					ii = Integer.valueOf(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
 					if (!rs.wasNull())
 						mTab.setValue("C_PaymentTerm_ID", ii);
 					//	InvoiceRule
@@ -501,14 +509,14 @@ public class CalloutOrder extends CalloutEngine
 			if (rs.next())
 			{
 				//	PriceList (indirect: IsTaxIncluded & Currency)
-				Integer ii = new Integer(rs.getInt(IsSOTrx ? "M_PriceList_ID" : "PO_PriceList_ID"));
+				Integer ii = Integer.valueOf(rs.getInt(IsSOTrx ? "M_PriceList_ID" : "PO_PriceList_ID"));
 				if (!rs.wasNull())
 					mTab.setValue("M_PriceList_ID", ii);
 				else
 				{	//	get default PriceList
 					int i = Env.getContextAsInt(ctx, "#M_PriceList_ID");
 					if (i != 0)
-						mTab.setValue("M_PriceList_ID", new Integer(i));
+						mTab.setValue("M_PriceList_ID", Integer.valueOf(i));
 				}
 
 				int bill_Location_ID = rs.getInt("Bill_Location_ID");
@@ -523,7 +531,7 @@ public class CalloutOrder extends CalloutEngine
 				if (bill_Location_ID == 0)
 					mTab.setValue("Bill_Location_ID", null);
 				else
-					mTab.setValue("Bill_Location_ID", new Integer(bill_Location_ID));
+					mTab.setValue("Bill_Location_ID", Integer.valueOf(bill_Location_ID));
 
 				//	Contact - overwritten by InfoBP selection
 				int contID = rs.getInt("AD_User_ID");
@@ -536,7 +544,7 @@ public class CalloutOrder extends CalloutEngine
 				if (contID == 0)
 					mTab.setValue("Bill_User_ID", null);
 				else
-					mTab.setValue("Bill_User_ID", new Integer(contID));
+					mTab.setValue("Bill_User_ID", Integer.valueOf(contID));
 
 				//	CreditAvailable 
 				if (IsSOTrx)
@@ -590,7 +598,7 @@ public class CalloutOrder extends CalloutEngine
 						mTab.setValue("PaymentRule", s);
 					}
 					//	Payment Term
-					ii = new Integer(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
+					ii = Integer.valueOf(rs.getInt(IsSOTrx ? "C_PaymentTerm_ID" : "PO_PaymentTerm_ID"));
 					if (!rs.wasNull())
 						mTab.setValue("C_PaymentTerm_ID", ii);
 					//	InvoiceRule
@@ -662,9 +670,9 @@ public class CalloutOrder extends CalloutEngine
 			if (rs.next())
 			{
 				//	Tax Included
-				mTab.setValue("IsTaxIncluded", new Boolean("Y".equals(rs.getString(1))));
+				mTab.setValue("IsTaxIncluded", Boolean.valueOf("Y".equals(rs.getString(1))));
 				//	Currency
-				Integer ii = new Integer(rs.getInt(3));
+				Integer ii = Integer.valueOf(rs.getInt(3));
 				mTab.setValue("C_Currency_ID", ii);
 				//	PriceList Version
 				Env.setContext(ctx, WindowNo, "M_PriceList_Version_ID", rs.getInt(5));
@@ -765,9 +773,9 @@ public class CalloutOrder extends CalloutEngine
 		mTab.setValue("PriceLimit", pp.getPriceLimit());
 		mTab.setValue("PriceActual", pp.getPriceStd());
 		mTab.setValue("PriceEntered", pp.getPriceStd());
-		mTab.setValue("C_Currency_ID", new Integer(pp.getC_Currency_ID()));
+		mTab.setValue("C_Currency_ID", Integer.valueOf(pp.getC_Currency_ID()));
 		mTab.setValue("Discount", pp.getDiscount());
-		mTab.setValue("C_UOM_ID", new Integer(pp.getC_UOM_ID()));
+		mTab.setValue("C_UOM_ID", Integer.valueOf(pp.getC_UOM_ID()));
 		mTab.setValue("QtyOrdered", mTab.getValue("QtyEntered"));
 		Env.setContext(ctx, WindowNo, "DiscountSchema", pp.isDiscountSchema() ? "Y" : "N");
 		
@@ -776,7 +784,7 @@ public class CalloutOrder extends CalloutEngine
 		//	Integer wh = (Integer)mTab.getValue("M_Warehouse_ID");
 		//	if (wh.intValue() != M_Warehouse_ID)
 		//	{
-		//		mTab.setValue("M_Warehouse_ID", new Integer(M_Warehouse_ID));
+		//		mTab.setValue("M_Warehouse_ID", Integer.valueOf(M_Warehouse_ID));
 		//		ADialog.warn(,WindowNo, "WarehouseChanged");
 		//	}
 
@@ -800,7 +808,7 @@ public class CalloutOrder extends CalloutEngine
 				{
 					Integer C_OrderLine_ID = (Integer)mTab.getValue("C_OrderLine_ID");
 					if (C_OrderLine_ID == null)
-						C_OrderLine_ID = new Integer(0);
+						C_OrderLine_ID = Integer.valueOf(0);
 					BigDecimal notReserved = MOrderLine.getNotReserved(ctx, 
 						M_Warehouse_ID, M_Product_ID, M_AttributeSetInstance_ID,
 						C_OrderLine_ID.intValue());
@@ -847,7 +855,7 @@ public class CalloutOrder extends CalloutEngine
 		}
 		mTab.setValue("M_AttributeSetInstance_ID", null);
 		mTab.setValue("S_ResourceAssignment_ID", null);
-		mTab.setValue("C_UOM_ID", new Integer(100));	//	EA
+		mTab.setValue("C_UOM_ID", Integer.valueOf(100));	//	EA
 		
 		Env.setContext(ctx, WindowNo, "DiscountSchema", "N");
 		String sql = "SELECT ChargeAmt FROM C_Charge WHERE C_Charge_ID=?";
@@ -954,7 +962,7 @@ public class CalloutOrder extends CalloutEngine
 		if (C_Tax_ID == 0)
 			mTab.fireDataStatusEEvent(CLogger.retrieveError());
 		else
-			mTab.setValue("C_Tax_ID", new Integer(C_Tax_ID));
+			mTab.setValue("C_Tax_ID", Integer.valueOf(C_Tax_ID));
 		//
 		if (steps) log.warning("fini");
 		return amt(ctx, WindowNo, mTab, mField, value);
@@ -1079,7 +1087,7 @@ public class CalloutOrder extends CalloutEngine
 			if ( priceList.doubleValue() != 0 )
 				priceActual = new BigDecimal ((100.0 - discount.doubleValue()) / 100.0 * priceList.doubleValue());
 			if (priceActual.scale() > standardPrecision)
-				priceActual = priceActual.setScale(standardPrecision, BigDecimal.ROUND_HALF_UP);
+				priceActual = priceActual.setScale(standardPrecision, RoundingMode.HALF_UP);
 			priceEntered = MUOMConversion.convertProductFrom (ctx, productId, 
 				uOMToId, priceActual);
 			if (priceEntered == null)
@@ -1095,7 +1103,7 @@ public class CalloutOrder extends CalloutEngine
 			else
 				discount = new BigDecimal ((priceList.doubleValue() - priceActual.doubleValue()) / priceList.doubleValue() * 100.0);
 			if (discount.scale() > 2)
-				discount = discount.setScale(2, BigDecimal.ROUND_HALF_UP);
+				discount = discount.setScale(2, RoundingMode.HALF_UP);
 			mTab.setValue("Discount", discount);
 		}
 		log.fine("PriceEntered=" + priceEntered + ", Actual=" + priceActual + ", Discount=" + discount);
@@ -1118,7 +1126,7 @@ public class CalloutOrder extends CalloutEngine
 			{
 				discount = new BigDecimal ((priceList.doubleValue () - priceActual.doubleValue ()) / priceList.doubleValue () * 100.0);
 				if (discount.scale () > 2)
-					discount = discount.setScale (2, BigDecimal.ROUND_HALF_UP);
+					discount = discount.setScale (2, RoundingMode.HALF_UP);
 				mTab.setValue ("Discount", discount);
 			}
 		}
@@ -1138,7 +1146,7 @@ public class CalloutOrder extends CalloutEngine
 			lineNetAmount = quantityOrdered.multiply(priceActual);
 		}
 		if (lineNetAmount.scale() > standardPrecision)
-			lineNetAmount = lineNetAmount.setScale(standardPrecision, BigDecimal.ROUND_HALF_UP);
+			lineNetAmount = lineNetAmount.setScale(standardPrecision, RoundingMode.HALF_UP);
 		log.info("LineNetAmt=" + lineNetAmount);
 		mTab.setValue("LineNetAmt", lineNetAmount);
 		//
@@ -1177,7 +1185,7 @@ public class CalloutOrder extends CalloutEngine
 		{
 			int C_UOM_To_ID = ((Integer)value).intValue();
 			QtyEntered = (BigDecimal)mTab.getValue("QtyEntered");
-			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), BigDecimal.ROUND_HALF_UP);
+			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), RoundingMode.HALF_UP);
 			if (QtyEntered.compareTo(QtyEntered1) != 0)
 			{
 				log.fine("Corrected QtyEntered Scale UOM=" + C_UOM_To_ID 
@@ -1208,7 +1216,7 @@ public class CalloutOrder extends CalloutEngine
 		{
 			int C_UOM_To_ID = Env.getContextAsInt(ctx, WindowNo, "C_UOM_ID");
 			QtyEntered = (BigDecimal)value;
-			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), BigDecimal.ROUND_HALF_UP);
+			BigDecimal QtyEntered1 = QtyEntered.setScale(MUOM.getPrecision(ctx, C_UOM_To_ID), RoundingMode.HALF_UP);
 			if (QtyEntered.compareTo(QtyEntered1) != 0)
 			{
 				log.fine("Corrected QtyEntered Scale UOM=" + C_UOM_To_ID 
@@ -1234,7 +1242,7 @@ public class CalloutOrder extends CalloutEngine
 			int C_UOM_To_ID = Env.getContextAsInt(ctx, WindowNo, "C_UOM_ID");
 			QtyOrdered = (BigDecimal)value;
 			int precision = MProduct.get(ctx, M_Product_ID).getUOMPrecision(); 
-			BigDecimal QtyOrdered1 = QtyOrdered.setScale(precision, BigDecimal.ROUND_HALF_UP);
+			BigDecimal QtyOrdered1 = QtyOrdered.setScale(precision, RoundingMode.HALF_UP);
 			if (QtyOrdered.compareTo(QtyOrdered1) != 0)
 			{
 				log.fine("Corrected QtyOrdered Scale " 
@@ -1282,7 +1290,7 @@ public class CalloutOrder extends CalloutEngine
 				{
 					Integer C_OrderLine_ID = (Integer)mTab.getValue("C_OrderLine_ID");
 					if (C_OrderLine_ID == null)
-						C_OrderLine_ID = new Integer(0);
+						C_OrderLine_ID = Integer.valueOf(0);
 					BigDecimal notReserved = MOrderLine.getNotReserved(ctx, 
 						M_Warehouse_ID, M_Product_ID, M_AttributeSetInstance_ID,
 						C_OrderLine_ID.intValue());
