@@ -96,6 +96,10 @@ import org.compiere.util.ValueNamePair;
  *	@author Michael McKay, michael.mckay@mckayerp.com
  *			<li> BF [ <a href="https://github.com/adempiere/adempiere/issues/1944">1944</a> ] First save of a record with new Yes-No field causes error. 
  *
+ *	@author Edwin Betancourt, EdwinBetanc0urt@outlook.com, https://github.com/EdwinBetanc0urt
+ * 		@see <a href="https://github.com/adempiere/adempiere/issues/3576">
+ * 		BR [ 3576 ] Currency Rate does not allow editing the Currency To value.</a>
+ *
  */
 public class GridTable extends AbstractTableModel
 	implements Serializable
@@ -1237,8 +1241,8 @@ public class GridTable extends AbstractTableModel
 
 		//  Save old value
 		m_oldValue = new Object[3];
-		m_oldValue[0] = new Integer(row);
-		m_oldValue[1] = new Integer(col);
+		m_oldValue[0] = Integer.valueOf(row);
+		m_oldValue[1] = Integer.valueOf(col);
 		m_oldValue[2] = oldValue;
 
 		//	Set Data item
@@ -1852,7 +1856,7 @@ public class GridTable extends AbstractTableModel
 								if (dd instanceof Integer)
 									iii = (Integer)dd;
 								else
-									iii = new Integer(dd.toString());
+									iii = Integer.valueOf(dd.toString());
 								if (encrypted)
 									iii = (Integer)encrypt(iii);
 								if (manualUpdate)
@@ -3172,11 +3176,12 @@ public class GridTable extends AbstractTableModel
 				//	Integer, ID, Lookup (UpdatedBy is a numeric column)
 				if (displayType == DisplayType.Integer
 					|| (DisplayType.isID(displayType) 
-						&& (columnName.endsWith("_ID") || columnName.endsWith("_Acct") 
+					&& (columnName.endsWith("_ID") || columnName.endsWith("_ID_To")
+					|| columnName.endsWith("_Acct")
 							|| columnName.equals("AD_Key") || columnName.equals("AD_Display"))) 
 					|| columnName.endsWith("atedBy"))
 				{
-					rowData[j] = new Integer(rs.getInt(j+1));	//	Integer
+					rowData[j] = Integer.valueOf(rs.getInt(j + 1));	//	Integer
 					if (rs.wasNull())
 						rowData[j] = null;
 				}
@@ -3195,7 +3200,7 @@ public class GridTable extends AbstractTableModel
 					String str = rs.getString(j+1);
 					if (field.isEncryptedColumn())
 						str = (String)decrypt(str);
-					rowData[j] = new Boolean ("Y".equals(str));	//	Boolean
+					rowData[j] = Boolean.valueOf("Y".equals(str));	//	Boolean
 				}
 				//	LOB
 				else if (DisplayType.isLOB(displayType))
