@@ -22,9 +22,10 @@ import java.util.Arrays;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicInteger;
 
+import org.adempiere.core.domains.models.I_AD_PrintForm;
+import org.adempiere.core.domains.models.I_C_Payment;
+import org.adempiere.core.domains.models.X_AD_PrintForm;
 import org.adempiere.exceptions.AdempiereException;
-import org.compiere.model.I_AD_PrintForm;
-import org.compiere.model.I_C_Payment;
 import org.compiere.model.MBPBankAccount;
 import org.compiere.model.MBPartner;
 import org.compiere.model.MMailText;
@@ -33,7 +34,6 @@ import org.compiere.model.MQuery;
 import org.compiere.model.MUser;
 import org.compiere.model.PrintInfo;
 import org.compiere.model.Query;
-import org.compiere.model.X_AD_PrintForm;
 import org.compiere.print.MPrintFormat;
 import org.compiere.print.ReportEngine;
 import org.compiere.util.Env;
@@ -159,8 +159,7 @@ public class PaySelectionSendRemittance extends PaySelectionSendRemittanceAbstra
 			.withUserId(getAD_User_ID())
 			.withText(message)
 			.withDescription(mailText.getMailHeader())
-			.withTableId(MPayment.Table_ID)
-			.withRecordId(payment.getC_Payment_ID());
+			.withEntity(payment);
 		if(businessPartnerBankAccountContact != null) {
 			notifier.addRecipient(businessPartnerBankAccountContact.getAD_User_ID());
 		} else if(!Util.isEmpty(businessPartnerBankAccountMail)) {
@@ -188,7 +187,7 @@ public class PaySelectionSendRemittance extends PaySelectionSendRemittanceAbstra
 		//	
 		MPrintFormat format = MPrintFormat.get (getCtx(), printForm.getRemittance_PrintFormat_ID(), false);
 		MQuery query = new MQuery("C_PaySelection_Remittance_v");
-		query.addRestriction(I_C_Payment.COLUMNNAME_C_Payment_ID, MQuery.EQUAL, new Integer(payment.getC_Payment_ID()));
+		query.addRestriction(I_C_Payment.COLUMNNAME_C_Payment_ID, MQuery.EQUAL, Integer.valueOf(payment.getC_Payment_ID()));
 		//	Engine
 		PrintInfo info = new PrintInfo(payment.getDocumentNo(), payment.get_Table_ID(), payment.getC_Payment_ID(), payment.getC_BPartner_ID());
 		info.setDescription(payment.getDocumentInfo());
