@@ -63,6 +63,7 @@ import javax.swing.SwingUtilities;
 import javax.swing.event.ChangeEvent;
 import javax.swing.event.ChangeListener;
 
+import org.adempiere.core.domains.models.X_C_Invoice;
 import org.adempiere.pdf.ITextDocument;
 import org.compiere.apps.ADialog;
 import org.compiere.apps.AEnv;
@@ -84,7 +85,6 @@ import org.compiere.model.MRole;
 import org.compiere.model.MSysConfig;
 import org.compiere.model.MUser;
 import org.compiere.model.PrintInfo;
-import org.compiere.model.X_C_Invoice;
 import org.compiere.process.ProcessInfo;
 import org.compiere.swing.CButton;
 import org.compiere.swing.CCheckBox;
@@ -151,16 +151,6 @@ public class Viewer extends CFrame
 	private static final String HTML = "H";
 
 	/**
-	 * 	@deprecated
-	 *	Viewer Constructor
-	 *	@param re report engine
-	 */
-	public Viewer (ReportEngine re)
-	{
-		this(null, re);
-	}
-
-	/**
 	 *	Viewer Constructor
 	 *  @param gc
 	 *	@param re report engine
@@ -185,7 +175,9 @@ public class Viewer extends CFrame
 		m_isAllowXLSView =  MRole.getDefault().isAllow_XLS_View();
 		try
 		{
-			m_viewPanel = re.getView();
+			m_viewPanel = new View();
+			re.setLayoutView(m_viewPanel);
+			re.showView();
 			m_ctx = m_reportEngine.getCtx();
 			String type = m_reportEngine.getReportType();
 			if (type == null) {
@@ -428,7 +420,7 @@ public class Viewer extends CFrame
 		summary.addActionListener(this);
 		//	Max Page
 		m_pageMax = m_viewPanel.getPageCount();
-		spinnerModel.setMaximum(new Integer(m_pageMax));
+		spinnerModel.setMaximum(Integer.valueOf(m_pageMax));
 		spinner.addChangeListener(this);
 
 		fillComboReport(m_reportEngine.getPrintFormat().get_ID());
@@ -637,7 +629,7 @@ public class Viewer extends CFrame
 	public void revalidate()
 	{
 		m_pageMax = m_viewPanel.getPageCount();
-		spinnerModel.setMaximum(new Integer(m_pageMax));
+		spinnerModel.setMaximum(Integer.valueOf(m_pageMax));
 
 		//	scroll area (page size dependent)
 		centerScrollPane.setPreferredSize(new Dimension
@@ -949,7 +941,7 @@ public class Viewer extends CFrame
 	//	System.out.println("scrollTo " + pageRectangle);
 
 		//	Set Page
-		spinnerModel.setValue(new Integer(m_pageNo));
+		spinnerModel.setValue(Integer.valueOf(m_pageNo));
 		StringBuffer sb = new StringBuffer (Msg.getMsg(m_ctx, "Page"))
 			.append(" ").append(m_pageNo)
 			.append(m_viewPanel.getPageInfo(m_pageNo))
@@ -1615,7 +1607,7 @@ public class Viewer extends CFrame
 		Login.initTest(true);
 
 		MQuery q = new MQuery("C_Invoice");
-		q.addRestriction("C_Invoice_ID", MQuery.EQUAL, new Integer(103));
+		q.addRestriction("C_Invoice_ID", MQuery.EQUAL, Integer.valueOf(103));
 
 		//	102 = Invoice - 100 = Order
 		PrintInfo i = new PrintInfo("test", X_C_Invoice.Table_ID, 102, 0);
@@ -1625,7 +1617,7 @@ public class Viewer extends CFrame
 	//	MPrintFormat f = new MPrintFormat(Env.getCtx(), 101);
 	//	ReportEngine re = new ReportEngine(f, null);
 
-		new Viewer(re);
+		new Viewer(null, re);
 	}	//	main
 
 }	//	Viewer
