@@ -51,11 +51,11 @@ public class DBDataSource extends compiereDataSource
     private PreparedStatement m_pstmt = null;
     private ResultSet	m_resultSet = null;
     
-    public DBDataSource(Properties ctx, ReportInfo ri, HashMap params)
+    public DBDataSource(Properties ctx, ReportInfo ri, HashMap<String, Object> params)
     {
         JasperReport jr = ri.getJasperReport();
         //Generate parameters map
-        HashMap parametersMap = new HashMap();
+        HashMap<String, JRParameter> parametersMap = new HashMap<String, JRParameter>();
         JRParameter[] jpara = jr.getParameters();
         for (int i=0; i<jpara.length; i++)
         {
@@ -140,7 +140,7 @@ public class DBDataSource extends compiereDataSource
 				}
 				else if (clazz.equals(java.lang.Double.class))
 				{
-					objValue = new Double(m_resultSet.getDouble(field.getName()));
+					objValue = Double.valueOf(m_resultSet.getDouble(field.getName()));
 					if(m_resultSet.wasNull())
 					{
 						objValue = null;
@@ -148,7 +148,7 @@ public class DBDataSource extends compiereDataSource
 				}
 				else if (clazz.equals(java.lang.Float.class))
 				{
-					objValue = new Float(m_resultSet.getFloat(field.getName()));
+					objValue = Float.valueOf(m_resultSet.getFloat(field.getName()));
 					if(m_resultSet.wasNull())
 					{
 						objValue = null;
@@ -156,7 +156,7 @@ public class DBDataSource extends compiereDataSource
 				}
 				else if (clazz.equals(java.lang.Integer.class))
 				{
-					objValue = new Integer(m_resultSet.getInt(field.getName()));
+					objValue = Integer.valueOf(m_resultSet.getInt(field.getName()));
 					if(m_resultSet.wasNull())
 					{
 						objValue = null;
@@ -164,7 +164,7 @@ public class DBDataSource extends compiereDataSource
 				}
 				else if (clazz.equals(java.lang.Long.class))
 				{
-					objValue = new Long(m_resultSet.getLong(field.getName()));
+					objValue = Long.valueOf(m_resultSet.getLong(field.getName()));
 					if(m_resultSet.wasNull())
 					{
 						objValue = null;
